--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Cat CRM-sistem</title>
   </head>
   <body class="page">
-    <aside class="sidebar js-menu" id="sidebar-menu">
+    <aside class="sidebar js-menu" id="sidebar-menu" data-menu>
       <nav class="menu">
         <a class="logo" href="index.html">
           <svg class="logo-icon" width="24" height="24">
@@ -15,7 +15,7 @@
           </svg>
           Cat CRM
         </a>
-        <button class="menu-btn js-menu-close" type="button" aria-label="Close menu">
+        <button class="menu-btn js-menu-close" type="button" aria-label="Close menu" data-menu-close>
           <svg class="menu-btn-icon" width="20" height="20">
             <use href="./src/img/icons/icons.svg#icon-x-lg"></use>
           </svg>
@@ -26,6 +26,7 @@
               <svg class="menu-icon" width="20" height="20">
                 <use href="./src/img/icons/icons.svg#icon-columns-gap"></use>
               </svg>
+              Overview
             </a>
           </li>
           <li class="menu-item">
@@ -33,6 +34,7 @@
               <svg class="menu-icon" width="20" height="20">
                 <use href="./src/img/icons/icons.svg#icon-person-plus"></use>
               </svg>
+              Contacts
             </a>
           </li>
           <li class="menu-item">
@@ -40,6 +42,7 @@
               <svg class="menu-icon" width="20" height="20">
                 <use href="./src/img/icons/icons.svg#icon-briefcase"></use>
               </svg>
+              Companies
             </a>
           </li>
           <li class="menu-item">
@@ -47,6 +50,7 @@
               <svg class="menu-icon" width="20" height="20">
                 <use href="./src/img/icons/icons.svg#icon-coin"></use>
               </svg>
+              Deals
             </a>
           </li>
           <li class="menu-item">
@@ -54,6 +58,7 @@
               <svg class="menu-icon" width="20" height="20">
                 <use href="./src/img/icons/icons.svg#icon-clipboard-check"></use>
               </svg>
+              Document
             </a>
           </li>
           <li class="menu-item">
@@ -61,6 +66,7 @@
               <svg class="menu-icon" width="20" height="20">
                 <use href="./src/img/icons/icons.svg#icon-envelope"></use>
               </svg>
+              Message 8
             </a>
           </li>
           <li class="menu-item">
@@ -68,6 +74,7 @@
               <svg class="menu-icon" width="20" height="20">
                 <use href="./src/img/icons/icons.svg#icon-calendar-range"></use>
               </svg>
+              Calendar
             </a>
           </li>
           <li class="menu-item">
@@ -75,6 +82,7 @@
               <svg class="menu-icon" width="20" height="20">
                 <use href="./src/img/icons/icons.svg#icon-journal-text"></use>
               </svg>
+              Report
             </a>
           </li>
           
@@ -83,7 +91,7 @@
 
     </aside>
     <header class="header">
-      <button class="menu-btn js-menu-open" type="button" aria-expanded="false" aria-controls="sidebar-menu">
+      <button class="menu-btn btn js-menu-open" type="button" aria-expanded="false" aria-controls="sidebar-menu" data-menu-open>
         <svg class="menu-btn-icon" width="24" height="24">
           <use href="./src/img/icons/icons.svg#icon-burger-menu"></use>
         </svg>
@@ -105,11 +113,11 @@
         <div class="welcome-wrapper">
           <h1 class="welcome-title">Hi Yaroslav,</h1>
           <p class="welcome-description">Welcome into Cat CRM Dashboard</p>
-          <button class="welcome-btn" type="button">
-            <svg class="welcome-btn-icon" width="16" height="16">
+          <button class="welcome-btn btn btn--primary" type="button">
+            <svg class="btn-icon" width="16" height="16">
               <use href="./src/img/icons/icons.svg#icon-plus"></use>
             </svg>
-            Primary norma</button>
+            <span class="btn-inner">Primary normal</span></button>
         </div>
       </section>
       <section class="co-workers">
@@ -479,6 +487,7 @@
               </div>
             </li>
           </ul>
+          <button class="co-workers-btn btn btn--secondary"><span class="btn-inner">Show more</span></button>
         </div>
       </section>
       <section class="tasks">
