--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/sass.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/img/icons/oval-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cat CRM-sistem</title>
   </head>
@@ -30,7 +30,7 @@
             </a>
           </li>
           <li class="menu-item">
-            <a class="menu-link current" href="index.html">
+            <a class="menu-link" href="index.html">
               <svg class="menu-icon" width="20" height="20">
                 <use href="./src/img/icons/icons.svg#icon-person-plus"></use>
               </svg>
@@ -38,7 +38,7 @@
             </a>
           </li>
           <li class="menu-item">
-            <a class="menu-link current" href="index.html">
+            <a class="menu-link" href="index.html">
               <svg class="menu-icon" width="20" height="20">
                 <use href="./src/img/icons/icons.svg#icon-briefcase"></use>
               </svg>
@@ -46,7 +46,7 @@
             </a>
           </li>
           <li class="menu-item">
-            <a class="menu-link current" href="index.html">
+            <a class="menu-link" href="index.html">
               <svg class="menu-icon" width="20" height="20">
                 <use href="./src/img/icons/icons.svg#icon-coin"></use>
               </svg>
@@ -54,7 +54,7 @@
             </a>
           </li>
           <li class="menu-item">
-            <a class="menu-link current" href="index.html">
+            <a class="menu-link" href="index.html">
               <svg class="menu-icon" width="20" height="20">
                 <use href="./src/img/icons/icons.svg#icon-clipboard-check"></use>
               </svg>
@@ -62,15 +62,15 @@
             </a>
           </li>
           <li class="menu-item">
-            <a class="menu-link current" href="index.html">
+            <a class="menu-link" href="index.html">
               <svg class="menu-icon" width="20" height="20">
                 <use href="./src/img/icons/icons.svg#icon-envelope"></use>
               </svg>
-              Message 8
+              Message <span class="menu-notification notification is-notify">8</span>
             </a>
           </li>
           <li class="menu-item">
-            <a class="menu-link current" href="index.html">
+            <a class="menu-link" href="index.html">
               <svg class="menu-icon" width="20" height="20">
                 <use href="./src/img/icons/icons.svg#icon-calendar-range"></use>
               </svg>
@@ -78,7 +78,7 @@
             </a>
           </li>
           <li class="menu-item">
-            <a class="menu-link current" href="index.html">
+            <a class="menu-link" href="index.html">
               <svg class="menu-icon" width="20" height="20">
                 <use href="./src/img/icons/icons.svg#icon-journal-text"></use>
               </svg>
