reports/tasks scss

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <main class="main">
       <section class="welcome">
         <div class="welcome-wrapper">
-          <h1 class="welcome-title">Hi Yaroslav,</h1>
+          <h1 class="welcome-title">Hi Maryna,</h1>
           <p class="welcome-description">Welcome into Cat CRM Dashboard</p> 
         </div>
         <button class="welcome-btn btn btn--primary" type="button">
@@ -126,7 +126,7 @@
       <section class="co-workers">
         <div class="co-workers-wrapper">
           <h2 class="co-workers-title">
-            <span>Co-workers</span>
+            <span>co-workers</span>
             | Marketing department
           </h2>
           <div class="co-workers-container">
@@ -324,7 +324,7 @@
             </details>
 
             <table class="co-workers-table">
-              <caption class="visually-hidden">Co-workers info</caption>
+              <caption class="visually-hidden">co-workers info</caption>
               <thead>
                 <tr>
                   <th>#</th>
@@ -609,11 +609,11 @@
         <h2 class="reports-title"><span>Task Report</span>|  Last 2 Weeks</h2>
         <ul class="reports-list">
           <li class="reports-item" data-status="up">
-            <div class="reports-co-worker co-worker">
-              <div class="co-worker-thumb">
-                <img class="co-worker-avatar" src="./src/img/icons/oval-icon.svg" alt="Ibnu Mas’ud" width="32" height="32"/>
+            <div class="reports-staff staff">
+              <div class="staff-thumb">
+                <img class="staff-avatar" src="./src/img/icons/oval-icon.svg" alt="Ibnu Mas’ud" width="32" height="32"/>
               </div>
-              <h3 class="co-worker-cation">Ibnu Mas’ud</h3>
+              <h3 class="staff-cation">Ibnu Mas’ud</h3>
             </div>
             <progress class="reports-bar" id="report_ibnu" max="100" value="89">
             <!-- For old browsers -->
@@ -628,11 +628,11 @@
             </svg>
           </li>
           <li class="reports-item" data-status="dash">
-            <div class="reports-co-worker co-worker">
-              <div class="co-worker-thumb">
-                <img class="co-worker-avatar" src="./src/img/icons/oval-icon.svg" alt="Ibnu Mas’ud" width="32" height="32"/>
+            <div class="reports-staff staff">
+              <div class="staff-thumb">
+                <img class="staff-avatar" src="./src/img/icons/oval-icon.svg" alt="Ibnu Mas’ud" width="32" height="32"/>
               </div>
-              <h3 class="co-worker-cation">Kelen Indah</h3>
+              <h3 class="staff-cation">Kelen Indah</h3>
             </div>
             <progress class="reports-bar" id="report_ibnu" max="100" value="45">
             <!-- For old browsers -->
@@ -647,11 +647,11 @@
             </svg>
           </li>
           <li class="reports-item" data-status="up">
-            <div class="reports-co-worker co-worker">
-              <div class="co-worker-thumb">
-                <img class="co-worker-avatar" src="./src/img/icons/oval-icon.svg" alt="Ibnu Mas’ud" width="32" height="32"/>
+            <div class="reports-staff staff">
+              <div class="staff-thumb">
+                <img class="staff-avatar" src="./src/img/icons/oval-icon.svg" alt="Ibnu Mas’ud" width="32" height="32"/>
               </div>
-              <h3 class="co-worker-cation">Mas Indro</h3>
+              <h3 class="staff-cation">Mas Indro</h3>
             </div>
             <progress class="reports-bar" id="report_ibnu" max="100" value="59">
             <!-- For old browsers -->
@@ -666,11 +666,11 @@
             </svg>
           </li>
           <li class="reports-item" data-status="dash">
-            <div class="reports-co-worker co-worker">
-              <div class="co-worker-thumb">
-                <img class="co-worker-avatar" src="./src/img/icons/oval-icon.svg" alt="Ibnu Mas’ud" width="32" height="32"/>
+            <div class="reports-staff staff">
+              <div class="staff-thumb">
+                <img class="staff-avatar" src="./src/img/icons/oval-icon.svg" alt="Ibnu Mas’ud" width="32" height="32"/>
               </div>
-              <h3 class="co-worker-cation">Geo Vanni</h3>
+              <h3 class="staff-cation">Geo Vanni</h3>
             </div>
             <progress class="reports-bar" id="report_ibnu" max="100" value="65">
             <!-- For old browsers -->
@@ -685,11 +685,11 @@
             </svg>
           </li>
           <li class="reports-item" data-status="down">
-            <div class="reports-co-worker co-worker">
-              <div class="co-worker-thumb">
-                <img class="co-worker-avatar" src="./src/img/icons/oval-icon.svg" alt="Ibnu Mas’ud" width="32" height="32"/>
+            <div class="reports-staff staff">
+              <div class="staff-thumb">
+                <img class="staff-avatar" src="./src/img/icons/oval-icon.svg" alt="Ibnu Mas’ud" width="32" height="32"/>
               </div>
-              <h3 class="co-worker-cation">Avian Rizk</h3>
+              <h3 class="staff-cation">Avian Rizk</h3>
             </div>
             <progress class="reports-bar" id="report_ibnu" max="100" value="65">
             <!-- For old browsers -->
